changes in footer

--- a/index.html
+++ b/index.html
@@ -582,7 +582,7 @@ Bootstrap 5 HTML CSS Template
 
                                 <strong class="text-white">
                                     <i class="bi-geo-alt me-2"></i>
-                                    Bandra West, Mumbai, Maharashtra 400050, India
+                                    Buenos Aires
                                 </strong>
 
                                 <ul class="social-icon mt-4">
@@ -618,7 +618,7 @@ Bootstrap 5 HTML CSS Template
                                     <strong class="me-2">Email:</strong>
 
                                     <a href="mailto:info@yourgmail.com" class="site-footer-link">
-                                        hello@barista.co
+                                        tacobox@gmail.com.co
                                     </a>
                                 </p>
                             </div>
