--- a/reservation.html
+++ b/reservation.html
@@ -22,7 +22,7 @@
 
         <link href="css/vegas.min.css" rel="stylesheet">
 
-        <link href="css/tooplate-barista.css" rel="stylesheet">
+        <link href="css/index.css" rel="stylesheet">
     </head>
     
     <body class="reservation-page">
