--- a/index.html
+++ b/index.html
@@ -445,27 +445,20 @@
                                     <div class="timeline-content">
                                         <div class="reviews-block">
                                             <div class="reviews-block-image-wrap d-flex align-items-center">
-                                                <img src="images/reviews/young-woman-with-round-glasses-yellow-sweater.jpg" class="reviews-block-image img-fluid" alt="">
+                                                <img src="images/reviews/peter.png" class="reviews-block-image img-fluid" alt="">
 
                                                 <div class="">
-                                                    <h6 class="text-white mb-0">Sandra</h6>
-                                                    <em class="text-white"> Customers</em>
+                                                    <h6 class="text-white mb-0">Peter</h6>
+                                                    <em class="text-white">Customers</em>
                                                 </div>
                                             </div>
 
                                             <div class="reviews-block-info">
-                                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                                                <p>Really good Mexican food, we split the XL Crispy Tacos between two people and it was the perfect amount of food… The atmosphere was incredible, they had music nonstop which I loved. I will come again sometime since it was my first time eating here</p>
 
                                                 <div class="d-flex border-top pt-3 mt-4">
-                                                    <strong class="text-white">4.5 <small class="ms-2">Rating</small></strong>
-
-                                                    <div class="reviews-group ms-auto">
-                                                        <i class="bi-star-fill"></i>
-                                                        <i class="bi-star-fill"></i>
-                                                        <i class="bi-star-fill"></i>
-                                                        <i class="bi-star-fill"></i>
-                                                        <i class="bi-star"></i>
-                                                    </div>
+                                                    <strong class="text-white">4.5 
+                                                    <small class="ms-2">Rating</small></strong>
                                                 </div>
                                             </div>
                                         </div>
@@ -476,27 +469,20 @@
                                     <div class="timeline-content">
                                         <div class="reviews-block">
                                             <div class="reviews-block-image-wrap d-flex align-items-center">
-                                                <img src="images/reviews/senior-man-white-sweater-eyeglasses.jpg" class="reviews-block-image img-fluid" alt="">
+                                                <img src="images/reviews/matias.png" class="reviews-block-image img-fluid" alt="">
 
                                                 <div class="">
-                                                    <h6 class="text-white mb-0">Don</h6>
+                                                    <h6 class="text-white mb-0">Matias</h6>
                                                     <em class="text-white"> Customers</em>
                                                 </div>
                                             </div>
 
                                             <div class="reviews-block-info">
-                                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                                                <p> The food was really good! So if you are looking for an awesome Mexican place, in terms of food, this won't disappoint you.</p>
 
                                                 <div class="d-flex border-top pt-3 mt-4">
-                                                    <strong class="text-white">4.5 <small class="ms-2">Rating</small></strong>
-
-                                                    <div class="reviews-group ms-auto">
-                                                        <i class="bi-star-fill"></i>
-                                                        <i class="bi-star-fill"></i>
-                                                        <i class="bi-star-fill"></i>
-                                                        <i class="bi-star-fill"></i>
-                                                        <i class="bi-star"></i>
-                                                    </div>
+                                                    <strong class="text-white">4.5 
+                                                    <small class="ms-2">Rating</small></strong>
                                                 </div>
                                             </div>
                                         </div>
@@ -507,27 +493,21 @@
                                     <div class="timeline-content">
                                         <div class="reviews-block">
                                             <div class="reviews-block-image-wrap d-flex align-items-center">
-                                                <img src="images/reviews/young-beautiful-woman-pink-warm-sweater-natural-look-smiling-portrait-isolated-long-hair.jpg" class="reviews-block-image img-fluid" alt="">
+                                                <img src="images/reviews/sam.png" class="reviews-block-image img-fluid" alt="">
 
                                                 <div class="">
-                                                    <h6 class="text-white mb-0">Olivia</h6>
+                                                    <h6 class="text-white mb-0">Sam</h6>
                                                     <em class="text-white"> Customers</em>
                                                 </div>
                                             </div>
 
                                             <div class="reviews-block-info">
-                                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                                                <p>Probably the best branch Mexican food. Tasty food and quick services. Worth the wait.</p>
 
                                                 <div class="d-flex border-top pt-3 mt-4">
-                                                    <strong class="text-white">4.5 <small class="ms-2">Rating</small></strong>
-
-                                                    <div class="reviews-group ms-auto">
-                                                        <i class="bi-star-fill"></i>
-                                                        <i class="bi-star-fill"></i>
-                                                        <i class="bi-star-fill"></i>
-                                                        <i class="bi-star-fill"></i>
-                                                        <i class="bi-star"></i>
-                                                    </div>
+                                                    <strong class="text-white">4.5 
+                                                    <small class="ms-2">Rating</small></strong>
+                                                </div>
                                                 </div>
                                             </div>
                                         </div>
@@ -581,7 +561,7 @@
                             </div>
 
                             <div class="col-lg-6 col-12 mx-auto mt-5 mt-lg-0 ps-lg-5">
-                                <iframe class="google-map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5039.668141741662!2d72.81814769288509!3d19.043340656729775!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7c994f34a7355%3A0x2680d63a6f7e33c2!2sLover%20Point!5e1!3m2!1sen!2sth!4v1692722771770!5m2!1sen!2sth" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>  
+                                <iframe class="google-map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3288.418115292986!2d-58.486777388420094!3d-34.492282851509444!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb16b8fdeb1a7%3A0xce7d9842f61f8875!2sTaco%20Box!5e0!3m2!1sen!2ses!4v1732803353078!5m2!1sen!2ses" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe> 
                             </div>
 
                         </div>
@@ -625,8 +605,8 @@
                                 <p class="d-flex mb-1">
                                     <strong class="me-2">Phone:</strong>
                                     <a href="tel: 305-240-9671" class="site-footer-link">
-                                        (65) 
-                                        305 2409 671
+                                        (11) 
+                                        61506076
                                     </a>
                                 </p>
 
@@ -634,7 +614,7 @@
                                     <strong class="me-2">Email:</strong>
 
                                     <a href="mailto:info@yourgmail.com" class="site-footer-link">
-                                        tacobox@gmail.com.co
+                                        tacobox@gmail.com
                                     </a>
                                 </p>
                             </div>
@@ -648,14 +628,14 @@
                                         Monday - Friday
                                         <span class="underline"></span>
 
-                                        <strong>9:00 - 18:00</strong>
+                                        <strong>18:00 - 1:00</strong>
                                     </li>
 
                                     <li class="d-flex">
                                         Saturday
                                         <span class="underline"></span>
 
-                                        <strong>11:00 - 16:30</strong>
+                                        <strong>18:00 - 4:30</strong>
                                     </li>
 
                                     <li class="d-flex">
@@ -668,8 +648,7 @@
                             </div>
 
                             <div class="col-lg-8 col-12 mt-4">
-                                <p class="copyright-text mb-0">Copyright © Barista Cafe 2048 
-                                    - Design: <a rel="sponsored" href="https://www.tooplate.com" target="_blank">Tooplate</a></p>
+                                <p class="copyright-text mb-0">Copyright © Taco Box 2024
                             </div>
                     </div>
                 </footer>
